--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ALURAFLIX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body> <!--inicio, corpo do documento-->
+    <header>ALURAFLIX</header>
+    <SECTION>
+        <div>
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <p>#homem-aranha</p>
+        </div>
+
+        <div>
+            <iframe width="560" hidght="315" src="https://www.youtube.com/watch?v=_4is7I_ZxTg"
+        </div>
     
 </body>
 </html>
