--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>ALURAFLIX</header>
     <section>
         <div>
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-            <p>#homem-aranha</p>
+            <h1>como treinar o seu draggão primeiro filme?</h1>
+            <p>#como treinar o seu dragão</p>
         </div>
 
-        <div>https://www.youtube
-            <iframe width="560" height="315" src="https://youtu.be/pWHQCruykns?si=Fjcd0vsBLXAskm63"
+        <div>
+            <iframe width="560" height="315" src="https://youtu.be/HIbwgbbJzSs?si=cOTfjO_rC21VceMC"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
                 web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
