--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/HIbwgbbJzSs?si=cOTfjO_rC21VceMC"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
-                web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src=<iframe width="560" height="315" src="https://www.youtube.com/embed/HIbwgbbJzSs?si=YJV13_Ji5v_UhsH9" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> allowfullscreen></iframe>
         </div>
     </section>
 </body><!--Fim, corpo do documento-->
