--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <header>ALURAFLIX</header>
     <section>
         <div>
-            <h1>como treinar o seu draggão primeiro filme?</h1>
-            <p>#como treinar o seu dragão</p>
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <p>#homem-aranha</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HIbwgbbJzSs?si=EK3ErOjsUeMpSEn4" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+                web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-<!--Carrossel de imagens-->
-<section class="recomendacoes">
 
+    <!--Carrossel de imagens-->
+    <section class="recomendacoes">
 <h2>Outras recomendações</h2>
 <div class="outras-recomendacoes">
 <a href="https://www.youtube.com/watch?v=10kObuxwee4">
