--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body> <!--Inicio, corpo do documento-->
     <header>ALURAFLIX</header>
-    <section>
+    <section class = 'classe1'>
         <div>
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
