--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>ALURAFLIX</header>
     <section class = 'classe1'>
         <div>
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <h1>Como treinar o seu dragão</h1>
             <p>#homem-aranha</p>
         </div>
 
