--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>ALURAFLIX</header>
     <section class = 'classe1'>
         <div>
-            <h1>Como treinar o seu dragão</h1>
-            <p>#homem-aranha</p>
+            <h1>Como treinar o seu dragão em live action</h1>
+            <p>#como treinar o seu dragão</p>
         </div>
 
         <div>
