--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section class="recomendacoes">
 <h2>Outras recomendações</h2>
 <div class="outras-recomendacoes">
-<a href="https://www.youtube.com/watch?v=10kObuxwee4">
-<img src="https://img.youtube.com/vi/10kObuxwee4/maxresdefault.jpg" />
+<a href="https://www.youtube.com/watch?v=CwXOrWvPBPk">
+<img src="https://img.youtube.com/vi/CwXOrWvPBPk/maxresdefault.jpg" />
 </a>
 <a href="https://www.youtube.com/watch?v=VEdh5a0kIZE">
     
